@@ -44,6 +44,10 @@ New checkers
 
   Closes #5880
 
+* Added the ``super-without-brackets`` checker, raised when a super call is missing its brackets.
+
+  Closes #4008
+
 Removed checkers
 ================
 
